public/favicon.ico: Update favicon to pulpito icon
Signed-off-by: Devansh3712 <devanshamity@gmail.com>

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Pulpito",
   "icons": [
     {
-      "src": "ceph-logo.svg",
+      "src": "favicon.ico",
       "sizes": "any"
     }
   ],
